--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ url: "http://ndrewtl.github.io" # the base hostname & protocol for your site
 # baseurl: "/the/subpath/of/your/site" # Set this value to "" if you want your site to be root
 baseurl: "/airspace-jekyll"
 cover: "/assets/cover.png"
-logo: "/assets/logo.png"
+logo: "/assets/logo.gif"
 
 # Build settings
 markdown: kramdown
