--- a/_config.yml
+++ b/_config.yml
@@ -12,9 +12,9 @@ keep_files:
   - ".gitignore"
 
 # Site settings
-title: Airspace
-subtitle: "A free HTML5 agency template"
-url: "http://ndrewtl.github.io" # the base hostname & protocol for your site
+title: outpaced.ai
+subtitle: "Optimized for efficiency."
+url: "https://outpaced-ai.github.io" # the base hostname & protocol for your site
 # baseurl: "/the/subpath/of/your/site" # Set this value to "" if you want your site to be root
 baseurl: "/airspace-jekyll"
 cover: "/assets/cover.png"
